--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="banner-principal">
                 <picture>
                     <!-- Mobile -->
-                    <source srcset="/imgs/mobile/banner_celular.jpg" media="(max-width:480px)">
+                    <source srcset="imgs/mobile/banner_celular.jpg" media="(max-width:480px)">
                     <!-- Tablet -->
-                    <source srcset="/imgs/tablet/banner_tablet.jpg" media="(max-width:768px)">
+                    <source srcset="imgs/tablet/banner_tablet.jpg" media="(max-width:768px)">
                     <!-- Desktop -->
                     <img src="imgs/desktop/banner.jpg" alt="Banner principal del videojuego">
                     <figcaption>
@@ -61,9 +61,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/caracteristicas/caracteristica1.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/caracteristicas/caracteristica1.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/caracteristicas/caracteristica1.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/caracteristicas/caracteristica1.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/caracteristicas/caracteristica1.jpg" alt="Imagen del protagonista" title="Imagen del protagonista">
                     </picture>
@@ -73,9 +73,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/caracteristicas/caracteristica2.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/caracteristicas/caracteristica2.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/caracteristicas/caracteristica2.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/caracteristicas/caracteristica2.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/caracteristicas/caracteristica2.jpg" alt="Imagen de los personajes jugables" title="Imagen de los personajes jugables">
                     </picture>
@@ -85,9 +85,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/caracteristicas/caracteristica3.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/caracteristicas/caracteristica3.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/caracteristicas/caracteristica3.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/caracteristicas/caracteristica3.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/caracteristicas/caracteristica3.jpg" alt="Imagen de la jugabilidad del juego" title="Imagen de la jugabilidad del juego">
                     </picture>
@@ -97,9 +97,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/caracteristicas/caracteristica4.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/caracteristicas/caracteristica4.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/caracteristicas/caracteristica4.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/caracteristicas/caracteristica4.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/caracteristicas/caracteristica4.jpg" alt="Imagen de la jugabilidad del juego" title="Imagen de la jugabilidad del juego">
                     </picture>
@@ -120,9 +120,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/yuri.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/yuri.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/yuri.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/yuri.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/yuri.jpg" alt="Apariencia de Yuri Lowell" title="Apariencia de Yuri Lowell">
                         </picture>
@@ -142,9 +142,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/stelle.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/stelle.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/stelle.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/stelle.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/stelle.jpg" alt="Apariencia de Estelle Sidos" title="Apariencia de Estelle Sidos">
                         </picture>
@@ -154,9 +154,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/flynn.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/flynn.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/flynn.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/flynn.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/flynn.jpg" alt="Apariencia de Flynn Scifo" title="Apariencia de Flynn Scifo">
                         </picture>
@@ -176,9 +176,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/repede.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/repede.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/repede.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/repede.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/repede.jpg" alt="Apariencia de Repede" title="Apariencia de Repede">
                         </picture>
@@ -188,9 +188,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/rita.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/rita.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/rita.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/rita.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/rita.jpg" alt="Apariencia de Rita Mordio" title="Apariencia de Rita Mordio">
                         </picture>
@@ -210,9 +210,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/karol.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/karol.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/karol.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/karol.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/karol.jpg" alt="Apariencia de Karol Capel" title="Apariencia de Karol Capel">
                         </picture>
@@ -222,9 +222,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/judith.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/judith.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/judith.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/judith.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/judith.jpg" alt="Apariencia de Judith" title="Apariencia de Judith">
                         </picture>
@@ -244,9 +244,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/raven.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/raven.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/raven.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/raven.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/raven.jpg" alt="Apariencia de Raven" title="Apariencia de Raven">
                         </picture>
@@ -256,9 +256,9 @@
                     <div>
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/personajes/patty.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/personajes/patty.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/personajes/patty.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/personajes/patty.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/personajes/patty.jpg" alt="Apariencia de Patty Fleur" title="Apariencia de Patty Fleur">
                         </picture>
@@ -277,9 +277,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/galeria/galeria1.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/galeria/galeria1.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/galeria/galeria1.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/galeria/galeria1.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/galeria/galeria1.jpg" alt="Captura del videojuego">
                     </picture>
@@ -287,9 +287,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/galeria/galeria2.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/galeria/galeria2.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/galeria/galeria2.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/galeria/galeria2.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/galeria/galeria2.jpg" alt="Captura del videojuego">
                     </picture>
@@ -297,9 +297,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/galeria/galeria3.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/galeria/galeria3.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/galeria/galeria3.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/galeria/galeria3.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/galeria/galeria3.jpg" alt="Captura del videojuego">
                     </picture>
@@ -307,9 +307,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/galeria/galeria4.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/galeria/galeria4.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/galeria/galeria4.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/galeria/galeria4.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/galeria/galeria4.jpg" alt="Captura del videojuego">
                     </picture>
@@ -317,9 +317,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/galeria/galeria5.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/galeria/galeria5.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/galeria/galeria5.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/galeria/galeria5.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/galeria/galeria5.jpg" alt="Captura del videojuego">
                     </picture>
@@ -327,9 +327,9 @@
                 <div>
                     <picture>
                         <!-- Mobile -->
-                        <source srcset="/imgs/mobile/galeria/galeria6.jpg" media="(max-width:480px)">
+                        <source srcset="imgs/mobile/galeria/galeria6.jpg" media="(max-width:480px)">
                         <!-- Tablet -->
-                        <source srcset="/imgs/tablet/galeria/galeria6.jpg" media="(max-width:768px)">
+                        <source srcset="imgs/tablet/galeria/galeria6.jpg" media="(max-width:768px)">
                         <!-- Desktop -->
                         <img src="imgs/desktop/galeria/galeria6.jpg" alt="Captura del videojuego">
                     </picture>
@@ -344,9 +344,9 @@
                     <div class="figura">
                         <picture>
                             <!-- Mobile -->
-                            <source srcset="/imgs/mobile/formulario/figura.jpg" media="(max-width:480px)">
+                            <source srcset="imgs/mobile/formulario/figura.jpg" media="(max-width:480px)">
                             <!-- Tablet -->
-                            <source srcset="/imgs/tablet/formulario/figura.jpg" media="(max-width:768px)">
+                            <source srcset="imgs/tablet/formulario/figura.jpg" media="(max-width:768px)">
                             <!-- Desktop -->
                             <img src="imgs/desktop/formulario/figura.jpg" alt="Figura de Yuri Lowell" title="Figura de Yuri Lowell">
                         </picture>
@@ -383,7 +383,7 @@
     <footer>
         <div class="footer-container">
             <picture>
-                <img src="/imgs/foto.jpg" alt="Apariencia del Alumno que diseño está maravillosa pagina web" title="Apariencia del Alumno que diseño está maravillosa pagina web">
+                <img src="imgs/foto.jpg" alt="Apariencia del Alumno que diseño está maravillosa pagina web" title="Apariencia del Alumno que diseño está maravillosa pagina web">
             </picture>
             <div class="datos">
                 <ul>
