--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                         <p><strong>Creada para la celebración de su décimo aniversario,</strong> <em>Tales of Vesperia: Definitive Edition</em> trae uno de los <abbr title="Japanese Role-Playing Game"><em>JRPGs</em></abbr> más adorados de todas las consolas modernas.</p>
                         <p><em>Tales of Vesperia,</em> una de las entregas más populares de la serie <em>'Tales of'</em> vuelve con una resolución de pantalla mejorada y personajes, eventos y trajes que no habían aparecido nunca fuera de Japón.</p>
                         <p>Comienza una lucha de poder en una civilización que depende de una antigua tecnología <strong>Blastia</strong> y el imperio que la controla. El destino de dos amigos que recorren caminos separados se entrelaza en una aventura épica que amenaza la existencia de todos.</p>
-                        <ul class="icon-list">
-                            <li><span class="icon icon1" title="Fecha de Lanzamiento">Fecha de Lanzamiento: </span>11/01/2019</li>
-                            <li><span class="icon icon2" title="Genero">Genero: </span>Rol</li>
-                            <li><span class="icon icon3" title="Desarrollador">Desarrollador: </span>BANDAI NAMCO Studios Inc.</li>
-                            <li><span class="icon icon4" title="Plataforma">Plataforma: </span>Xbox One, Play 4, Switch y PC</li>
-                        </ul>
                     </div>
+                    <ul class="lista">
+                        <li><span>Fecha de Lanzamiento: </span>11/01/2019</li>
+                        <li><span>Genero: </span>Rol</li>
+                        <li><span>Desarrollador: </span>BANDAI NAMCO Studios Inc.</li>
+                        <li><span>Plataforma: </span>Xbox One, Play 4, Switch y PC</li>
+                    </ul>
                 </div>
             </div>
         </section>
