--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="icon" href="/imgs/icons/icon.png" type="image/x-icon">
 
-    <title>Tales of Vesperia</title>
+    <title>Neto Matias | Tales of Vesperia</title>
 </head>
 <body>
     <header id="inicio">
