--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-    <link rel="icon" href="/imgs/icons/icon.png" type="image/x-icon">
+    <link rel="icon" href="imgs/icons/icon.png" type="image/x-icon">
 
     <title>Neto Matias | Tales of Vesperia</title>
 </head>
